--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./styles/style.css" />
-        <title>Flights</title>
+        <title>Todo List</title>
     </head>
     <body>
         <main>
-            <div class="img">
-                <img src="./assets/flight.jpeg" alt="flight" />
-            </div>
-            <div id="parent">
-                <div class="flight test">
-                    <div class="name">Name</div>
-                    <div class="plane">Plane</div>
-                    <div class="departureDate">Departure Date</div>
-                    <div class="origin">Origin</div>
-                    <div class="arrivalDate">Arrival Date</div>
-                    <div class="destination">Destination</div>
-                    <div class="stops">Stops</div>
+            <section class="section-center">
+                <form class="todos-form">
+                    <h3><span>TODO</span>List</h3>
+                    <div class="form-control">
+                        <input
+                            type="text"
+                            id="todo-input"
+                            placeholder="e.g. Buy beer"
+                        />
+                        <button type="submit" class="submit-btn">Submit</button>
+                    </div>
+                    <div class="error"></div>
+                </form>
+                <div class="todos-container">
+                    <div class="todos-list"></div>
+                    <button class="clear-btn">Clear Items</button>
                 </div>
-            </div>
+            </section>
         </main>
         <script type="module" src="./src/init.js"></script>
     </body>
