--- a/index.html
+++ b/index.html
@@ -11,26 +11,7 @@
         <title>Todo List</title>
     </head>
     <body>
-        <main>
-            <section class="section-center">
-                <form class="todos-form">
-                    <h3><span>TODO</span>List</h3>
-                    <div class="form-control">
-                        <input
-                            type="text"
-                            id="todo-input"
-                            placeholder="e.g. Buy beer"
-                        />
-                        <button type="submit" class="submit-btn">Submit</button>
-                    </div>
-                    <div class="error"></div>
-                </form>
-                <div class="todos-container">
-                    <div class="todos-list"></div>
-                    <button class="clear-btn">Clear Items</button>
-                </div>
-            </section>
-        </main>
+        <main></main>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
